--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
         <cms.version>3.3-SNAPSHOT</cms.version>
         <dari.version>3.3-SNAPSHOT</dari.version>
         <slf4j.version>1.7.12</slf4j.version>
-        <tomcat.port>9480</tomcat.port>
-        <with-styleguide>true</with-styleguide>
+        <styleguide.viewgenerator.skip>false</styleguide.viewgenerator.skip>
+        <styleguide.viewgenerator.watch>false</styleguide.viewgenerator.watch>
     </properties>
 
     <modelVersion>4.0.0</modelVersion>
@@ -64,14 +64,23 @@
 
         <dependency>
             <groupId>com.psddev</groupId>
-            <artifactId>dari-h2</artifactId>
+            <artifactId>dari-util</artifactId>
             <version>${dari.version}</version>
         </dependency>
 
+        <!-- Database - MySQL -->
         <dependency>
-            <groupId>com.psddev</groupId>
-            <artifactId>dari-util</artifactId>
-            <version>${dari.version}</version>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.18</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- Database - Solr -->
+        <dependency>
+            <groupId>org.apache.solr</groupId>
+            <artifactId>solr-solrj</artifactId>
+            <version>4.8.1</version>
         </dependency>
 
         <dependency>
@@ -131,10 +140,30 @@
             <version>1.1.2</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.xmlgraphics/fop -->
         <dependency>
-            <groupId>org.apache.solr</groupId>
-            <artifactId>solr-solrj</artifactId>
-            <version>4.8.1</version>
+            <groupId>org.apache.xmlgraphics</groupId>
+            <artifactId>fop</artifactId>
+            <version>2.1</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.xmlgraphics/xmlgraphics-commons -->
+        <dependency>
+            <groupId>org.apache.xmlgraphics</groupId>
+            <artifactId>xmlgraphics-commons</artifactId>
+            <version>2.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>net.sf.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>2.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jdom</groupId>
+            <artifactId>jdom</artifactId>
+            <version>1.1.3</version>
         </dependency>
 
     </dependencies>
@@ -155,69 +184,20 @@
                 </configuration>
             </plugin>
 
-            <plugin>
-                <groupId>org.codehaus.cargo</groupId>
-                <artifactId>cargo-maven2-plugin</artifactId>
-                <version>1.4.14</version>
-                <configuration>
-                    <container>
-                        <containerId>tomcat8x</containerId>
-                        <zipUrlInstaller>
-                            <url>http://archive.apache.org/dist/tomcat/tomcat-8/v8.0.27/bin/apache-tomcat-8.0.27.zip</url>
-                            <downloadDir>${user.home}/.brightspot/cargo-downloads</downloadDir>
-                        </zipUrlInstaller>
-                        <systemProperties>
-                            <tomcat.port>${tomcat.port}</tomcat.port>
-                        </systemProperties>
-                        <dependencies>
-                            <dependency>
-                                <groupId>org.slf4j</groupId>
-                                <artifactId>jcl-over-slf4j</artifactId>
-                                <type>jar</type>
-                            </dependency>
-                            <dependency>
-                                <groupId>org.slf4j</groupId>
-                                <artifactId>slf4j-api</artifactId>
-                                <type>jar</type>
-                            </dependency>
-                            <dependency>
-                                <groupId>org.slf4j</groupId>
-                                <artifactId>slf4j-jdk14</artifactId>
-                                <type>jar</type>
-                            </dependency>
-                        </dependencies>
-                    </container>
-                    <configuration>
-                        <properties>
-                            <cargo.servlet.port>${tomcat.port}</cargo.servlet.port>
-                        </properties>
-                        <configfiles>
-                            <configfile>
-                                <file>${project.basedir}/.tomcat/tomcat-context.xml</file>
-                                <todir>conf</todir>
-                                <tofile>context.xml</tofile>
-                            </configfile>
-                            <configfile>
-                                <file>${project.basedir}/.tomcat/tomcat-logging.properties</file>
-                                <todir>conf</todir>
-                                <tofile>logging.properties</tofile>
-                            </configfile>
-                            <configfile>
-                                <file>${project.basedir}/.tomcat/tomcat-storage.xml</file>
-                                <todir>conf/Catalina/localhost</todir>
-                                <tofile>storage.xml</tofile>
-                            </configfile>
-                        </configfiles>
-                    </configuration>
-                    <deployables>
-                        <deployable>
-                            <properties>
-                                <context>/</context>
-                            </properties>
-                        </deployable>
-                    </deployables>
-                </configuration>
+             <plugin>
+                <groupId>com.psddev</groupId>
+                <artifactId>styleguide-maven-plugin</artifactId>
+                <version>${bsp.styleguide.version}</version>
+
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generate-views</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
+
         </plugins>
     </build>
 
@@ -229,10 +209,6 @@
                 <file>
                     <exists>yarn.lock</exists>
                 </file>
-                <property>
-                    <name>with-styleguide</name>
-                    <value>!false</value>
-                </property>
             </activation>
 
             <build>
@@ -256,23 +232,10 @@
                             </execution>
 
                             <execution>
-                                <id>yarn-cache-clean</id>
-                                <goals>
-                                    <goal>yarn</goal>
-                                </goals>
-                                <configuration>
-                                    <arguments>cache clean</arguments>
-                                </configuration>
-                            </execution>
-
-                            <execution>
                                 <id>yarn</id>
                                 <goals>
                                     <goal>yarn</goal>
                                 </goals>
-                                <configuration>
-                                    <arguments>--pure-lockfile</arguments>
-                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
@@ -287,10 +250,6 @@
                 <file>
                     <exists>gulpfile.js</exists>
                 </file>
-                <property>
-                    <name>with-styleguide</name>
-                    <value>!false</value>
-                </property>
             </activation>
 
             <build>
@@ -305,25 +264,12 @@
                                 <id>gulp</id>
                                 <phase>generate-resources</phase>
                                 <configuration>
-                                    <environmentVariables>
-                                        <DISABLE_NOTIFIER>true</DISABLE_NOTIFIER>
-                                    </environmentVariables>
+                                  <environmentVariables>
+                                      <DISABLE_NOTIFIER>true</DISABLE_NOTIFIER>
+                                  </environmentVariables>
                                 </configuration>
                                 <goals>
                                     <goal>gulp</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-
-                    <plugin>
-                        <groupId>com.psddev</groupId>
-                        <artifactId>styleguide-maven-plugin</artifactId>
-                        <version>${bsp.styleguide.version}</version>
-                        <executions>
-                            <execution>
-                                <goals>
-                                    <goal>generate-views</goal>
                                 </goals>
                             </execution>
                         </executions>
